use react-native-blob-util instead of rn-fetch-blob

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mutagen-d/react-native-file-cache",
+  "name": "@vi-dot/react-native-file-cache",
   "version": "0.2.0",
   "description": "Caching files to disk in react-native apps",
   "main": "dist/index.js",
@@ -23,12 +23,11 @@
     "@jest/globals": "^27.0.6",
     "@types/jest": "^26.0.24",
     "@types/react-native": "^0.64.12",
-    "@types/rn-fetch-blob": "^1.2.2",
     "jest": "^27.0.6",
     "react": "^17.0.2",
     "react-native": "^0.64.2",
+    "react-native-blob-util": "^0.19.0",
     "rimraf": "^3.0.2",
-    "rn-fetch-blob": "0.12.0",
     "tree-file-system": "^0.1.0",
     "ts-jest": "^27.0.4",
     "typescript": "^4.3.5",
